[package]
name = "hytale-checker"
version = "1.0.0"
edition = "2024"
authors = ["tahakcbg"]
description = "A fast, modern GUI application for checking Hytale username availability"
repository = "https://github.com/tahakcbg/hytale-username-checker"
license = "MIT"
keywords = ["hytale", "username", "checker", "gui", "iced"]
categories = ["gui", "games"]
readme = "README.md"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
iced = { version = "0.14", features = ["tokio"] }
reqwest = { version = "0.12.28", features = ["json", "socks"] }
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
